21 May 2012: Wouter
	- windows runs installer from userspace.
	- windows dnssectrigger depends on unbound for boot invocation,
	  this fixes an error where it cannot tell unbound what to do.
	- fix updater for double callback due to retry and double reply.
	- fix slash in downloaded file and executed file (windows).

18 May 2012: Wouter
	- improved printout of SSL_ERROR_SYSCALL errors.
	- do not print interface-unknown and conn-reset errors upon system
	  restart for windows, only printed on high verbosity.

2 April 2012: Wouter
	- Remove debug print from update code.
	- Add debug prints to update code.
	- Fix FIONBIO error on windows.

30 March 2012: Wouter
	- windows implementation for update dialog and selfupdate.
	- work on osx update dialog and selfupdate.
	- lint clean.

29 March 2012: Wouter
	- fix exit of panel and threads
	- fix read multiple persist actions in one SSL packet frame.
	- gtk gui to ask for install of new software.  No unix action exists.

26 March 2012: Wouter
	- lock unlock and delete at exit of panel is improved.

15 March 2012: Wouter
	- configure windows detects GetAdaptersAdresses (XP and later).
	- snapshot for test.
	- Fix compatibility with VirtualBox on Windows, that messes with the
	  network adapters.  Solution works on windows XP and later (detected
	  by configure).
	- Fix trayicon on windows high DPI settings to look better.
	- silence connect() http errors, unless verbosity 2.
	- stop other download if one succeeds (happy eyeballs) on selfupdate.

13 March 2012: Wouter
	- self update work.

12 March 2012: Wouter
	- self update work.

9 March 2012: Wouter
	- update osx config to new config template.
	- login-command and login-location man page entries.
	- windows shows browser on login.
	- debug prints removed from http.

8 March 2012: Wouter
	- OSX GUI for no web access dialog.
	- OSX update dnssec-trigger.conf with new url settings.
	- OSX fix the double-window shown bug, bug in NSWindow deminiaturize func.