@@ -4,6 +4,7 @@
 	  this fixes an error where it cannot tell unbound what to do.
 	- fix updater for double callback due to retry and double reply.
 	- fix slash in downloaded file and executed file (windows).
+	- linebuffer for dnssec-trigger-control stdout, for results printout.
 
 18 May 2012: Wouter
 	- improved printout of SSL_ERROR_SYSCALL errors.
